--- a/PdfIng/PdfIng.csproj
+++ b/PdfIng/PdfIng.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Document.cs" />
+    <Compile Include="Enums.cs" />
     <Compile Include="IHasGraphics.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Section.cs" />
