--- a/PdfIng/PdfIng.csproj
+++ b/PdfIng/PdfIng.csproj
@@ -50,12 +50,17 @@
   <ItemGroup>
     <Compile Include="Document.cs" />
     <Compile Include="Enums.cs" />
-    <Compile Include="IHasGraphics.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rendering\RenderObject.cs" />
+    <Compile Include="Rendering\RenderObjectList.cs" />
+    <Compile Include="Rendering\TextArea.cs" />
     <Compile Include="Section.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="TODO.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
